@@ -6,6 +6,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import server.project_module05.model.dto.request.wish_list.WishListRequest;
 import server.project_module05.model.dto.response.wish_list.WishListResponse;
+import server.project_module05.model.entity.Product;
 import server.project_module05.model.entity.WishList;
 import server.project_module05.repository.IProductRepository;
 import server.project_module05.repository.IUserRepository;
@@ -13,15 +14,15 @@ import server.project_module05.repository.IWishListRepository;
 import server.project_module05.security.principle.UserDetail;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class WishListService implements IWishListService{
+public class WishListService implements IWishListService {
     private final IWishListRepository wishListRepository;
     private final IProductRepository productRepository;
     private final IUserRepository userRepository;
     private final ModelMapper modelMapper;
+
     @Override
     public void addNewWishList(WishListRequest wishListRequest) {
         UserDetail userDetail = (UserDetail) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
@@ -34,19 +35,25 @@ public class WishListService implements IWishListService{
     @Override
     public List<WishListResponse> getAllWishList() {
         UserDetail userDetail = (UserDetail) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        return wishListRepository.findAllByUser(userRepository.findByUserId(userDetail.getId())).stream()
+        List<WishListResponse> wishListResponses = wishListRepository.findAllByUser(userRepository.findByUserId(userDetail.getId())).stream()
                 .map(wishList -> modelMapper.map(wishList, WishListResponse.class))
-                .collect(Collectors.toList());
+                .toList();
+        for (int i = 0; i < wishListResponses.size(); i++) {
+            Product p = productRepository.findByProductId(wishListResponses.get(i).getProductId());
+            wishListResponses.get(i).setImgUrl(p.getImgUrl());
+        }
+        return wishListResponses;
     }
 
-    @Override
-    public void deleteById(Long wishListId) {
-        UserDetail userDetail = (UserDetail) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        Boolean isWishListExist = wishListRepository.existsByWishListIdAndUser(wishListId, userRepository.findByUserId(userDetail.getId()));
-        if (!isWishListExist){
-            throw new RuntimeException("Could not find id");
-        }else {
-            wishListRepository.deleteById(wishListId);
-        }
+
+@Override
+public void deleteById(Long wishListId) {
+    UserDetail userDetail = (UserDetail) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    Boolean isWishListExist = wishListRepository.existsByWishListIdAndUser(wishListId, userRepository.findByUserId(userDetail.getId()));
+    if (!isWishListExist) {
+        throw new RuntimeException("Could not find id");
+    } else {
+        wishListRepository.deleteById(wishListId);
     }
+}
 }
